stage 5 finished but have few problems in the RenderTest